<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp"
    android:elevation="8dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_view_eventTitle"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/card_view_eventTitleTv"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_view_eventDescription"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:id="@+id/card_view_eventDescriptionTv"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_view_eventDate"
            android:layout_marginTop="5dp"
            android:id="@+id/card_view_eventDateTv"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end|center"
        android:src="@drawable/ic_baseline_star_border_24"
        android:background="@color/design_default_color_primary"/>


</androidx.cardview.widget.CardView>