<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/textClock"
        android:format12Hour="hh:mm:ss a"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_events_msg"
        android:layout_weight="1"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </ScrollView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/appsGridLayout"
        android:layout_weight="10">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/gpsLayout">

                <ImageView
                    android:id="@+id/gpsImageButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon_gps"
                    android:scaleType="fitXY"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gpsTextView"
                    android:text="@string/gps_text"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/calendarLayout">

                <ImageView
                    android:id="@+id/calendarImageButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon_calender"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/calendarTextView"
                    android:text="@string/calendar_text"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/sendMessageLayout">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/messageImageButton"
                    android:src="@drawable/icon_message"
                    android:scaleType="fitXY"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/messageTextView"
                    android:text="@string/message_text"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/alarmClockLayout">

                <ImageView
                    android:id="@+id/alarmClockImageButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon_alarm_clock"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alarmClockTextView"
                    android:text="@string/alarm_clock_text"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/addContactLayout">

                <ImageView
                    android:id="@+id/addContactImageButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon_add_contact"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addContactTextView"
                    android:text="@string/add_contact_text"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/phoneStatisticsLayout">

                <ImageView
                    android:id="@+id/phoneStatisticsImageButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon_phone_statistics"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/phoneStatisticsTextView"
                    android:text="@string/phone_statistics_text"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </TableRow>

    </TableLayout>

</LinearLayout>